[2129] Improve flow creation tool
Bug: https://github.com/eclipse-syson/syson/issues/2129
Signed-off-by: Guillaume Coutable <guillaume.coutable@obeo.fr>